# payroll_tool

./: .gitignore  README.md  docker-compose.yml
.claude/: settings.local.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt  seed_data.py
backend/alembic/: README  env.py
backend/alembic/versions/: 001_initial_schema.py  002_align_schema_with_real_payroll.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/models/: __init__.py  attendance_records.py  attendance_uploads.py  colleges.py  departments.py  designations.py  employee_leave_balances.py  employee_salary_structures.py  employees.py  holidays.py  leave_policies.py  payroll_cycles.py  payroll_entries.py  payroll_entry_components.py  payslips.py  reports.py  salary_components.py
backend/app/repositories/: __init__.py
backend/app/routers/: __init__.py  attendance.py  colleges.py  departments.py  employees.py  holidays.py  leave_policies.py  payroll.py  payslips.py  reports.py  salary_components.py
backend/app/schemas/: __init__.py  attendance.py  college.py  department.py  designation.py  employee.py  employee_leave_balance.py  employee_salary_structure.py  holiday.py  leave_policy.py  payroll.py  payslip.py  report.py  salary_component.py
backend/app/services/: __init__.py  attendance_service.py  payroll_service.py  payslip_service.py  report_service.py
backend/app/utils/: __init__.py  date_utils.py  excel_parser.py  pdf_generator.py  report_generator.py
backend/storage/payslips/: .gitkeep
(+41 files in other folders)
