[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.128.7",
    "openpyxl>=3.1.5",
    "psycopg2-binary>=2.9.11",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dateutil>=2.9.0.post0",
    "python-multipart>=0.0.22",
    "reportlab>=4.4.9",
    "sqlalchemy>=2.0.46",
    "uvicorn[standard]>=0.40.0",
]
